[gd_scene load_steps=4 format=2]

[ext_resource path="res://arena/resource_bit.gd" type="Script" id=1]
[ext_resource path="res://arena/chase.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="resource" type="Area2D"]
script = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="chase" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="body_entered"]
[connection signal="body_exited" from="." to="." method="body_exited"]
[connection signal="hit" from="chase" to="." method="chase_hit"]
